--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST= 'localhost'
-DB_USERNAME= 'root'
-DB_PASSWORD= ''
-DB_DATABASE= 'TokoBuku'
-PORT = 8000
+DB_HOST= 'remotemysql.com'
+DB_USERNAME= 'wAOv1GXgzv'
+DB_PASSWORD= 'VwbWVVpbRc'
+DB_DATABASE= 'wAOv1GXgzv'
+PORT = 8009
